--- a/src/components/quote/Quote.css
+++ b/src/components/quote/Quote.css
@@ -7,10 +7,11 @@
     padding: 0 0 30px 0;
 }
 
-.quote_block{
+.quote__block{
     line-height: 15px;
     color:rgb(255, 255, 255);
     cursor: pointer;
     font-family: 'Open Sans Condensed', sans-serif;
     margin-bottom: 20px;
+    
 }
